2009-11-02  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Support ARIA "tab" roles
        https://bugs.webkit.org/show_bug.cgi?id=30842

        * DumpRenderTree/AccessibilityUIElement.cpp:
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:

2009-11-01  Eric Seidel  <eric@webkit.org>

        Reviewed by David Levin.

        buildbots should use --exit-after-N-failures
        https://bugs.webkit.org/show_bug.cgi?id=30809

        Make the bots exit after 20 failures to prevent never-ending
        test runs where every test spends a minute crashing.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:

2009-11-01  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Eric Seidel.

        Turn on warnings for QtWebKit for gcc
        https://bugs.webkit.org/show_bug.cgi?id=30958

        * DumpRenderTree/qt/main.cpp: 
        (crashHandler): Mark function NO_RETURN

2009-11-01  Jessie Berlin  <jberlin@webkit.org>

        Adding myself to the committers list.

        * Scripts/modules/committers.py:

2009-10-30  Jon Honeycutt  <jhoneycutt@apple.com>

        Fix an issue that Adam noticed in DRT.

        Reviewed by Darin Adler.

        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::role):
        Get the length of the role text, and create a buffer dynamically.

2009-10-30  Eric Seidel  <eric@webkit.org>

        No review, rolling out r50105.
        http://trac.webkit.org/changeset/50105

        This commit was causing:
        https://bugs.webkit.org/show_bug.cgi?id=30869
        We'll re-implement the feature a different way.

        * Scripts/bugzilla-tool:

2009-10-29  Jon Honeycutt  <jhoneycutt@apple.com>

        Test for MSAA: Accessibility of headings is not correct
